Sat Apr 15 03:11:18 2006  Tim Janik  <timj@gtk.org>

	* bse/bseplugin.c: use BirnetCPUInfo to determine whether to load
	plugins with .SSE extension.

	* bse/bsemain.[hc]: added BseMainArgs.force_fpu, settable 
	via --bse-force-fpu.

Fri Apr 14 02:18:51 2006  Tim Janik  <timj@gtk.org>

	* bsesequencer.cc: moved everything extern "C" and everything static
	out of the anon namespace. leave just C++ class definitions inside
	namespace anon. this fixes C API linking errors with gcc-4.2.

Thu Apr 13 23:56:01 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: fixed regeneration of files in srcdir.

	* bseplugin.c: filter out plugins that don't end in .FPU.*.

Tue Apr 11 23:38:11 2006  Tim Janik  <timj@gtk.org>

	* tests/Makefile.am:
	* Makefile.am: make dist fixes, conditionalize perl rules.

Sat Apr  8 02:09:15 2006  Tim Janik  <timj@gtk.org>

	* bseloader-mad.c:
	* bseloader-wav.c: use basename instead of full file path for internal
	wave names.

Tue Apr  4 21:59:39 2006  Tim Janik  <timj@gtk.org>

	* tests/cutvorbis.c:
	* tests/magictest.c:
	* tests/mathtests.c:
	* Makefile.am: removed tools.

	* tests/testfft.c: 
	* tests/subnormals.cc: changed to make use of test macros.

Tue Apr  4 02:06:45 2006  Tim Janik  <timj@gtk.org>

	* tests/Makefile.am: build and check loophandle, got rid of testwavechunk.

Mon Apr  3 21:51:28 2006  Tim Janik  <timj@gtk.org>

	* tests/subnormals.cc: first test for correctness, then for performance.

Mon Apr  3 15:50:14 2006  Stefan Westerfeld <stefan@space.twc.de>

	* tests/subnormals.cc tests/subnormals-aux.cc: Added code which
	verifies that subnormal elimination functions are correct.

Sun Apr  2 18:19:42 2006  Tim Janik  <timj@gtk.org>

	* bse/Makefile.am: some more dependency and minor build fixes.

Sun Apr  2 03:31:24 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: merged with gslmakefile.inc. fixed dependencies. 
	simplified build rules. integrated with Makefile.decl.

	* *.hh *.cc: removed useless "mode: c++;" statement.