@@ -1,3 +1,11 @@
+Wed Apr 19 02:41:55 2006  Tim Janik  <timj@gtk.org>
+
+	* Makefile.am:
+	(CLEANFILES): don't add @PERLRULE@ to CLEANFILES, as this can cause 
+	its contents to be partially commented out. instead, add 
+	$(bse_proc_gen_sources) conditionally to MAINTAINERCLEANFILES
+	or CLEANFILES, depending on the AM conditional WITH_PERLRULE.
+
 Sat Apr 15 03:11:18 2006  Tim Janik  <timj@gtk.org>
 
 	* bse/bseplugin.c: use BirnetCPUInfo to determine whether to load
